[project]
name = "zm07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KubotaHidetoshi", email = "hidetoshi0601@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zm07 = "zm07:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
